# dale

./: .gitignore  CMakeLists.txt  build.cmd  build.sh  uild.cmd
.github/workflows/: build.yml
src/dale/: dalec.cpp  daleci.cpp
src/dale/Generator/: Generator.cpp
src/dale/Lexer/: Lexer.cpp
src/dale/Module/Reader/: Reader.cpp
src/dale/REPL/: REPL.cpp
